--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     build: .
     container_name: xiaozhi-web
     ports:
-      - "5001:5001"  # Web服务端口
-      - "5002:5002"  # WebSocket代理端口
+      - "5001:5001"  # Web service port
+      - "5002:5002"  # WebSocket proxy port
     environment:
-      - WS_URL=ws://your_server_address:9005  # 替换为你的服务器地址
+      - WS_URL=ws://localhost:9005  # Replace with your server address
       - WEB_PORT=5001
       - PROXY_PORT=5002
     restart: unless-stopped
