--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-# WebSocket服务器地址
+# WebSocket server address
 WS_URL=ws://your_server_address:9005
 
-# 设备认证令牌
+# Device authentication token
 DEVICE_TOKEN=your_token
 
-# Web服务器配置
+# Web server configuration
 WEB_PORT=5001
 PROXY_PORT=5002
